--- a/style/style.scss
+++ b/style/style.scss
@@ -5,14 +5,32 @@
 }
 
 html {
-    height: 100%;
+    min-width: 100%;
+    min-height: 100vh;
     font-size: 100%;
-    background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
-    overflow: hidden;
 }
 
-body {
-    padding: 1rem;
+.js-module {
+    width: 100%;
+    height: 100vh;
+    background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
+    overflow: hidden;
+    padding-top: 1rem;
+
+    &__title {
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 1.5rem;
+        color: #ffffff;
+        text-align: center;
+    }
+
+    &__container {
+        padding: 1rem;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
 }
 
 #stars {
@@ -80,7 +98,7 @@ body {
 }
 
 
-.js-basics {
+.js-block {
     display: inline-flex;
     width: 150px;
     flex-direction: column;
